--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,12 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -17,12 +23,42 @@
         <h1>Tech Scraper</h1>
         <p class="lead">The latest technology news from Reuters</p>
     </div>
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/saved">Saved Articles</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/scrape">Scrape</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link clear" href="#">Clear Articles</a>
+        </li>
+    </ul>
     <div class="container">
-    {{{body}}}
+        {{{body}}}
 
     </div>
 
 </body>
+
+<script>
+    $(document).ready(function () {
+
+        $(".clear").on("click", () => {
+
+            $.ajax({
+                method: "DELETE",
+                url: "/clear"
+            }).then(() => {
+                window.location.reload();
+            })
+        })
+
+    });
+</script>
 
 
 </html>
