added comments to code

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,6 +6,7 @@
 {{else}}
 {{#each articles}}
 
+{{!-- Displays all articles with the value of saved: false --}}
 {{#unless saved}}
 
 <div class="row">
