--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -6,6 +6,7 @@
 {{else}}
 {{#each articles}}
 
+{{!-- Displays all articles with the value of saved: true --}}
 {{#if saved}}
 <div class="row">
     <div class="col-sm-12 article card" data-id={{id}}>
